kubernetes/goserver.yaml
apiVersion: apps/v1  
kind: Deployment  
metadata:  
  name: grpc-server-go  
  namespace: sopes1  
spec:  
  selector:  
    matchLabels:  
      app: grpc-server-go  
  template:  
    metadata:  
      labels:  
        app: grpc-server-go  
    spec:  
      containers:  
      - name: grpc-server-go  
        image: dennis2441/golang-server-grpc:latest  
        resources:  
          requests:  
            memory: "64Mi"  
            cpu: "100m"  
          limits:  
            memory: "128Mi"  
            cpu: "300m"  
        ports:  
        - containerPort: 50051  
---
apiVersion: v1  
kind: Service  
metadata:  
  name: go-server-service  
  namespace: sopes1  
spec:  
  selector:  
    app: grpc-server-go  
  ports:  
    - protocol: TCP  
      port: 50051  
      targetPort: 50051  
  type: ClusterIP
