kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1  
kind: Ingress  
metadata:  
  name: sopes1-ingress  
  namespace: sopes1  
  labels:  
    name: sopes1-ingress  
spec:  
  ingressClassName: nginx  
  rules:  
    - host: 35.194.39.167.nip.io  
      http:  
        paths:  
          - pathType: Prefix  
            path: /grpc-go  
            backend:  
              service:  
                name: go-client-service  
                port:  
                  number: 8080  
          - pathType: Prefix  
            path: /grpc-rust  
            backend:  
              service:  
                name: rust-client-service  
                port:  
                  number: 8080
